2011-01-22  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-move-article): Protect against backends
	(i.e., nnimap) returning nil as the article number.

2011-01-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* flow-fill.el (fill-flowed): Make `delete-space' option correspond to
	"DelSp" parameter in RFC3676.

2011-01-22  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-check-recipients): Display the encoded version of
	the bogus address if they differ.

	* gnus-draft.el (gnus-group-send-queue): Really refresh the queue group
	after sending.

	* gnus-agent.el (gnus-agent-send-mail): Ditto.

	* gnus-group.el (gnus-group-refresh-group): New convenience function.

	* gnus-draft.el (gnus-group-send-queue): Update the queue group in the
	group buffer after sending the queue.

	* gnus-agent.el (gnus-agent-send-mail): Ditto.

2011-01-22  Julien Danjou  <julien@danjou.info>

	* mailcap.el (mailcap-mime-extensions): Rename text/org to text/x-org.

2011-01-22  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-preferred-alternative-precedence): Don't bug out on
	nested related parts.

	* nnfolder.el (nnfolder-request-expire-articles): Return the list of
	unexpired articles.  This fixes the regression that led expiry marks to
	disappear from nnfolder groups.

2011-01-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-button-alist, gnus-button-handle-info-keystrokes):
	Don't confuse the "ret" of "retrograde" with RET.

2011-01-21  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-mime-display-single): Use mm-display-inline rather
	than mm-insert-inline.

2011-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-remove-images, gnus-article-show-images):
	Widen article buffer.

2011-01-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-find-buffer-file-coding-system): Don't forget to kill
	the temp buffer.
	* message.el (message-mailer-swallows-blank-line): Use with-temp-buffer.
